--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=backend
 
+# Server Configuration
+server.port=${PORT:8080}
+
 # PostgreSQL Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/findwarranty}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate Configuration
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=20MB
